fix: design, color, spacing adjustments

--- a/src/clearForm/FormSection.module.css
+++ b/src/clearForm/FormSection.module.css
@@ -1,10 +1,18 @@
 .container {
     border: 1px solid var(--colors-grey400);
-    margin-bottom: 16px;
-    padding: 8px;
+    background-color: var(--colors-white);
+    border-radius: 3px;
+    margin-bottom: var(--spacers-dp16);
+    padding: var(--spacers-dp16);
 }
 
 .groupHeadline {
-    margin: 0 0 var(--spacers-dp16);
+    margin: 0 0 var(--spacers-dp12);
     font-size: 20px;
+    font-weight: 500;
+}
+
+.empty {
+    color: var(--colors-grey700);
+    font-size: 14px;
 }
